--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "q": "^1.4.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-grid-layout": "^0.12.7",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
@@ -20,9 +21,12 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "chai": "^3.5.0",
+    "jsx-loader": "^0.13.2",
     "mocha": "2.3.3",
     "react-edit-inline": "^1.0.7",
-    "sinon": "^1.17.3"
+    "sinon": "^1.17.3",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
     "babel": "babel . --watch --out-dir compiled --presets=es2015,react --ignore=node_modules,compiled,server --source-maps inline",
