--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^4.0.0-alpha.2",
     "express": "^4.14.0",
+    "fs": "0.0.2",
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
     "mongoose": "^4.5.3",
+    "multiparty": "^4.1.2",
     "q": "^1.4.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
